# xinput2-for-games

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: release.yml
kodi-addon/: README.md
kodi-addon/script.xinput2-for-games/: addon.py  addon.xml
kodi-addon/script.xinput2-for-games/resources/language/resource.language.en_gb/: strings.po
kodi-addon/script.xinput2-for-games/resources/language/resource.language.fr_fr/: strings.po
src/xinput2_for_games/: __init__.py  cli.py  core.py  gui.py  kodi_gui.py  main.py
